fix(SideMenu): minor CSS tweak
Prevent code icon in side menu item to be shrunk by a line-overflowing text

--- a/src/components/Menu/SideMenu.module.css
+++ b/src/components/Menu/SideMenu.module.css
@@ -107,6 +107,7 @@
   font-size: 12px;
   top: 2px;
   display: inline-table;
+  flex-shrink: 0;
 }
 
 @media (min-width: 1024px) {
